--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@react-email/components": "0.0.14",
     "@react-email/render": "^0.0.12",
@@ -44,6 +45,7 @@
     "react-icons": "^5.0.1",
     "react-paystack": "^5.0.0",
     "react-spinners": "^0.13.8",
+    "recharts": "^2.12.2",
     "resend": "^3.1.0",
     "sharp": "^0.33.2",
     "sonner": "^1.4.0",
