--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "date-fns": "^3.6.0",
     "flutterwave-react-v3": "^1.3.0",
     "framer-motion": "^11.0.3",
     "lucide-react": "^0.321.0",
